crates/swift-bridge-macro/tests/ui/unrecognized-argument-attribute.stderr
error: Unrecognized attribute "InvalidArgumentAttribute".
 --> tests/ui/unrecognized-argument-attribute.rs:8:28
  |
8 |             #[swift_bridge(InvalidArgumentAttribute)] some_value: isize
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^
